--- a/package.json
+++ b/package.json
@@ -8,13 +8,18 @@
     "preview": "vite preview"
   },
   "dependencies": {
+    "amfe-flexible": "^2.2.1",
     "axios": "^0.27.2",
+    "less": "^4.1.3",
     "normalize.css": "^8.0.1",
+    "vant": "3.5.1",
     "vue": "^3.2.25",
     "vue-router": "^4.0.16"
   },
   "devDependencies": {
     "@vitejs/plugin-vue": "^2.3.3",
+    "postcss": "^8.4.14",
+    "postcss-pxtorem": "^6.0.0",
     "vite": "^2.9.9"
   }
 }
